tests/snapshots/generated_from_inputs__good_void_return.snap
---
source: tests/fixtures.rs
description: "// Author: Tomasz Wysocki 277696\nint main() {\n    run();\n    return 0;\n}\n\nvoid run() {\n    printInt(0);\n    if(true)\n        return;\n    printInt(1);\n}\n"
input_file: inputs/good/void_return.lat
---
; ModuleID = 'void_return'
source_filename = "void_return"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  call void @latte_user_run()
  ret i32 0
}

define void @latte_user_run() {
b0:
  call void @printInt(i32 0)
  ret void
}

