tests/snapshots/generated_from_inputs__good_while_true.snap
---
source: tests/fixtures.rs
description: "// Author: Tomasz Wysocki 277696\nint main() {\n    while(true) {\n        return 0;\n    }\n}\n"
input_file: inputs/good/while_true.lat
---
; ModuleID = 'while_true'
source_filename = "while_true"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  br label %b1

b1:                                               ; preds = %b0
  br label %b2

b2:                                               ; preds = %b1
  ret i32 0
}

